
SUBDIRS = isoqlog tr 

EXTRA_DIST = AUTHORS ChangeLog COPYING EnderUNIX FAQ INSTALL NEWS README README.Turkish TODO 

install-data-local:
	$(mkinstalldirs) /usr/local/share/doc/isoqlog/
	$(INSTALL_DATA) $(srcdir)/AUTHORS /usr/local/share/doc/isoqlog/AUTHORS
	$(mkinstalldirs) /usr/local/share/doc/isoqlog/
	$(INSTALL_DATA) $(srcdir)/ChangeLog /usr/local/share/doc/isoqlog/ChangeLog
	$(mkinstalldirs) /usr/local/share/doc/isoqlog/
	$(INSTALL_DATA) $(srcdir)/COPYING /usr/local/share/doc/isoqlog/COPYING
	$(mkinstalldirs) /usr/local/share/doc/isoqlog/
	$(INSTALL_DATA) $(srcdir)/EnderUNIX /usr/local/share/doc/isoqlog/EnderUNIX
	$(mkinstalldirs) /usr/local/share/doc/isoqlog/
	$(INSTALL_DATA) $(srcdir)/FAQ /usr/local/share/doc/isoqlog/FAQ
	$(mkinstalldirs) /usr/local/share/doc/isoqlog/
	$(INSTALL_DATA) $(srcdir)/INSTALL /usr/local/share/doc/isoqlog/INSTALL
	$(mkinstalldirs) /usr/local/share/doc/isoqlog/
	$(INSTALL_DATA) $(srcdir)/NEWS /usr/local/share/doc/isoqlog/NEWS
	$(mkinstalldirs) /usr/local/share/doc/isoqlog/
	$(INSTALL_DATA) $(srcdir)/README /usr/local/share/doc/isoqlog/README
	$(mkinstalldirs) /usr/local/share/doc/isoqlog/
	$(INSTALL_DATA) $(srcdir)/README.Turkish /usr/local/share/doc/isoqlog/README.Turkish
	$(mkinstalldirs) /usr/local/share/doc/isoqlog/
	$(INSTALL_DATA) $(srcdir)/TODO /usr/local/share/doc/isoqlog/TODO

uninstall-local:
	-rm -f /usr/local/share/doc/isoqlog/AUTHORS
	-rm -f /usr/local/share/doc/isoqlog/ChangeLog
	-rm -f /usr/local/share/doc/isoqlog/COPYING
	-rm -f /usr/local/share/doc/isoqlog/EnderUNIX
	-rm -f /usr/local/share/doc/isoqlog/FAQ
	-rm -f /usr/local/share/doc/isoqlog/INSTALL
	-rm -f /usr/local/share/doc/isoqlog/NEWS
	-rm -f /usr/local/share/doc/isoqlog/README
	-rm -f /usr/local/share/doc/isoqlog/README.Turkish
	-rm -f /usr/local/share/doc/isoqlog/TODO

AUTOMAKE_OPTIONS = foreign
