# Process this file with autoconf to produce a configure script.

AC_INIT(isoqlog, 2.2-BETA, bug-report@enderunix.org)
AC_CANONICAL_SYSTEM
AC_CONFIG_SRCDIR([isoqlog/Global.h])
AM_CONFIG_HEADER(isoqlog/config.h)
#AC_CONFIG_HEADER macro used by autoheader
#AC_CONFIG_HEADER(isoqlog/config.h)
AM_INIT_AUTOMAKE(isoqlog, 2.2-BETA)


# Checks for programs.
AC_PROG_CC

unset CDPATH
dnl make /usr/local the default for the installation
#AC_PREFIX_DEFAULT(/usr/local)

if test "x$prefix" = "xNONE"; then
  prefix=$ac_default_prefix
  ac_configure_args="$ac_configure_args --prefix $prefix"
fi
# Checks for libraries.

# Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h stdlib.h string.h strings.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T
AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_STAT
AC_CHECK_FUNCS([gethostname memset mkdir strcasecmp strdup strerror strstr])

AC_CONFIG_FILES([ Makefile ])
AC_CONFIG_FILES([ isoqlog/Makefile ])
AC_CONFIG_FILES([ isoqlog/htmltemp/Makefile ])
AC_CONFIG_FILES([ isoqlog/htmltemp/images/Makefile ])
AC_CONFIG_FILES([ isoqlog/htmltemp/library/Makefile ])
AC_CONFIG_FILES([ isoqlog/lang/Makefile ])
AC_CONFIG_FILES([ tr/Makefile ])
AC_OUTPUT
