

EXTRA_DIST = BENIOKU DEGISIKLIKLER HABERLER KOPYALAMA KURULUM YAZARLAR 

install-data-local:
	$(mkinstalldirs) /usr/local/share/doc/isoqlog/tr/
	$(INSTALL_DATA) $(srcdir)/BENIOKU /usr/local/share/doc/isoqlog/tr/BENIOKU
	$(mkinstalldirs) /usr/local/share/doc/isoqlog/tr/
	$(INSTALL_DATA) $(srcdir)/DEGISIKLIKLER /usr/local/share/doc/isoqlog/tr/DEGISIKLIKLER
	$(mkinstalldirs) /usr/local/share/doc/isoqlog/tr/
	$(INSTALL_DATA) $(srcdir)/HABERLER /usr/local/share/doc/isoqlog/tr/HABERLER
	$(mkinstalldirs) /usr/local/share/doc/isoqlog/tr/
	$(INSTALL_DATA) $(srcdir)/KOPYALAMA /usr/local/share/doc/isoqlog/tr/KOPYALAMA
	$(mkinstalldirs) /usr/local/share/doc/isoqlog/tr/
	$(INSTALL_DATA) $(srcdir)/KURULUM /usr/local/share/doc/isoqlog/tr/KURULUM
	$(mkinstalldirs) /usr/local/share/doc/isoqlog/tr/
	$(INSTALL_DATA) $(srcdir)/YAZARLAR /usr/local/share/doc/isoqlog/tr/YAZARLAR

uninstall-local:
	-rm -f /usr/local/share/doc/isoqlog/tr/BENIOKU
	-rm -f /usr/local/share/doc/isoqlog/tr/DEGISIKLIKLER
	-rm -f /usr/local/share/doc/isoqlog/tr/HABERLER
	-rm -f /usr/local/share/doc/isoqlog/tr/KOPYALAMA
	-rm -f /usr/local/share/doc/isoqlog/tr/KURULUM
	-rm -f /usr/local/share/doc/isoqlog/tr/YAZARLAR

