

EXTRA_DIST = turkish swedish spanish russian portuguese polish dutch english finnish french german italian norwegian czech romana bulgarian danish

install-data-local:
	$(mkinstalldirs) /usr/local/share/isoqlog/lang/
	$(INSTALL_DATA) $(srcdir)/turkish /usr/local/share/isoqlog/lang/turkish
	$(mkinstalldirs) /usr/local/share/isoqlog/lang/
	$(INSTALL_DATA) $(srcdir)/swedish /usr/local/share/isoqlog/lang/swedish
	$(mkinstalldirs) /usr/local/share/isoqlog/lang/
	$(INSTALL_DATA) $(srcdir)/spanish /usr/local/share/isoqlog/lang/spanish
	$(mkinstalldirs) /usr/local/share/isoqlog/lang/
	$(INSTALL_DATA) $(srcdir)/russian /usr/local/share/isoqlog/lang/russian
	$(mkinstalldirs) /usr/local/share/isoqlog/lang/
	$(INSTALL_DATA) $(srcdir)/portuguese /usr/local/share/isoqlog/lang/portuguese
	$(mkinstalldirs) /usr/local/share/isoqlog/lang/
	$(INSTALL_DATA) $(srcdir)/polish /usr/local/share/isoqlog/lang/polish
	$(mkinstalldirs) /usr/local/share/isoqlog/lang/
	$(INSTALL_DATA) $(srcdir)/dutch /usr/local/share/isoqlog/lang/dutch
	$(mkinstalldirs) /usr/local/share/isoqlog/lang/
	$(INSTALL_DATA) $(srcdir)/english /usr/local/share/isoqlog/lang/english
	$(mkinstalldirs) /usr/local/share/isoqlog/lang/
	$(INSTALL_DATA) $(srcdir)/finnish /usr/local/share/isoqlog/lang/finnish
	$(mkinstalldirs) /usr/local/share/isoqlog/lang/
	$(INSTALL_DATA) $(srcdir)/french /usr/local/share/isoqlog/lang/french
	$(mkinstalldirs) /usr/local/share/isoqlog/lang/
	$(INSTALL_DATA) $(srcdir)/german /usr/local/share/isoqlog/lang/german
	$(mkinstalldirs) /usr/local/share/isoqlog/lang/
	$(INSTALL_DATA) $(srcdir)/italian /usr/local/share/isoqlog/lang/italian
	$(mkinstalldirs) /usr/local/share/isoqlog/lang/
	$(INSTALL_DATA) $(srcdir)/norwegian /usr/local/share/isoqlog/lang/norwegian

	$(mkinstalldirs) /usr/local/share/isoqlog/lang/
	$(INSTALL_DATA) $(srcdir)/czech /usr/local/share/isoqlog/lang/czech
	$(mkinstalldirs) /usr/local/share/isoqlog/lang/
	$(INSTALL_DATA) $(srcdir)/czech /usr/local/share/isoqlog/lang/romana
	$(mkinstalldirs) /usr/local/share/isoqlog/lang/
	$(INSTALL_DATA) $(srcdir)/czech /usr/local/share/isoqlog/lang/bulgarian
	$(mkinstalldirs) /usr/local/share/isoqlog/lang/
	$(INSTALL_DATA) $(srcdir)/czech /usr/local/share/isoqlog/lang/danish




uninstall-local:
	-rm -f /usr/local/share/isoqlog/lang/turkish
	-rm -f /usr/local/share/isoqlog/lang/swedish
	-rm -f /usr/local/share/isoqlog/lang/spanish
	-rm -f /usr/local/share/isoqlog/lang/russian
	-rm -f /usr/local/share/isoqlog/lang/portuguese
	-rm -f /usr/local/share/isoqlog/lang/polish
	-rm -f /usr/local/share/isoqlog/lang/dutch
	-rm -f /usr/local/share/isoqlog/lang/english
	-rm -f /usr/local/share/isoqlog/lang/finnish
	-rm -f /usr/local/share/isoqlog/lang/french
	-rm -f /usr/local/share/isoqlog/lang/german
	-rm -f /usr/local/share/isoqlog/lang/italian
	-rm -f /usr/local/share/isoqlog/lang/norwegian
	-rm -f /usr/local/share/isoqlog/lang/czech
	-rm -f /usr/local/share/isoqlog/lang/romana
	-rm -f /usr/local/share/isoqlog/lang/bulgarian
	-rm -f /usr/local/share/isoqlog/lang/danish

