

EXTRA_DIST = dot.gif home.gif isoqlog.gif pk.gif up.gif 

install-data-local:
	$(mkinstalldirs) /usr/local/share/isoqlog/htmltemp/images/
	$(INSTALL_DATA) $(srcdir)/dot.gif /usr/local/share/isoqlog/htmltemp/images/dot.gif
	$(mkinstalldirs) /usr/local/share/isoqlog/htmltemp/images/
	$(INSTALL_DATA) $(srcdir)/home.gif /usr/local/share/isoqlog/htmltemp/images/home.gif
	$(mkinstalldirs) /usr/local/share/isoqlog/htmltemp/images/
	$(INSTALL_DATA) $(srcdir)/isoqlog.gif /usr/local/share/isoqlog/htmltemp/images/isoqlog.gif
	$(mkinstalldirs) /usr/local/share/isoqlog/htmltemp/images/
	$(INSTALL_DATA) $(srcdir)/pk.gif /usr/local/share/isoqlog/htmltemp/images/pk.gif
	$(mkinstalldirs) /usr/local/share/isoqlog/htmltemp/images/
	$(INSTALL_DATA) $(srcdir)/up.gif /usr/local/share/isoqlog/htmltemp/images/up.gif

uninstall-local:
	-rm -f /usr/local/share/isoqlog/htmltemp/images/dot.gif
	-rm -f /usr/local/share/isoqlog/htmltemp/images/home.gif
	-rm -f /usr/local/share/isoqlog/htmltemp/images/isoqlog.gif
	-rm -f /usr/local/share/isoqlog/htmltemp/images/pk.gif
	-rm -f /usr/local/share/isoqlog/htmltemp/images/up.gif

